fixed overlay spacing at less than 800px wide

--- a/source/scss/sections.scss
+++ b/source/scss/sections.scss
@@ -25,10 +25,18 @@
 
         &--lesbos {
             background-image: url('http://newsimg.bbc.co.uk/news/special/2016/newsspec_12934/content/full-width/common/img/mami-dog-cropped.jpg');
+            margin-bottom: 80px;
+            @media (min-width: 800px) {
+                margin-bottom: 0;
+            }
         }
 
         &--undertaker {
             background-image: url('http://newsimg.bbc.co.uk/news/special/2016/newsspec_12934/content/full-width/common/img/mami-dog-cropped.jpg');
+            margin-bottom: 80px;
+            @media (min-width: 800px) {
+                margin-bottom: 0;
+            }
         }
 
         &__player {
